# stageroslinux

./: .gitignore  bcap_error_codes.md  joint_stats_20260410_104019.csv  joint_stats_20260410_105921.csv  joint_stats_20260410_113711.csv  joint_stats_20260410_114321.csv  joint_stats_20260413_102737.csv  joint_stats_20260413_102902.csv  joint_stats_20260602_141655.csv  joint_stats_20260602_141830.csv  joint_stats_20260602_143055.csv  joint_stats_20260602_143133.csv  launch_denso_stack.py  readme.md  run_logged_command.sh  wsl_ros_bridge.py
denso_ros2_ws/: frames_2026-02-18_12.17.07.gv  symlink_install_manifest.txt
denso_ros2_ws/install/: local_setup.sh  setup.sh
denso_ros2_ws/install/bcap_core/include/bcap_core/: bcap_common.h  bcap_funcid.h  dn_additional.h  dn_com.h  dn_common.h  dn_device.h  dn_robotalk.h  dn_socket.h  dn_tcp.h  dn_thread.h  dn_udp.h
denso_ros2_ws/install/bcap_core/share/bcap_core/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
denso_ros2_ws/install/bcap_service/lib/bcap_service/: bcap_service_exec
denso_ros2_ws/install/bcap_service/share/bcap_service/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
denso_ros2_ws/install/bcap_service_interfaces/share/bcap_service_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
denso_ros2_ws/install/denso_motion_control/lib/denso_motion_control/: denso_motion_server
denso_ros2_ws/install/denso_motion_control/share/denso_motion_control/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
denso_ros2_ws/install/denso_robot_bringup/share/denso_robot_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
denso_ros2_ws/src/Staubli_ROS2-humble/: README.md
denso_ros2_ws/src/Staubli_ROS2-humble/staubli_bringup/: CMakeLists.txt  package.xml
denso_ros2_ws/src/Staubli_ROS2-humble/staubli_robot_bringup/: CMakeLists.txt  package.xml
denso_ros2_ws/src/Staubli_ROS2-humble/staubli_robot_description/: CMakeLists.txt  package.xml
denso_ros2_ws/src/Staubli_ROS2-humble/staubli_robot_moveit_config/: CMakeLists.txt  package.xml
denso_ros2_ws/src/Staubli_ROS2-humble/staubli_tx2_60l_description/: package.xml
denso_ros2_ws/src/Staubli_ROS2-humble/staubli_tx40_description/: CMakeLists.txt  package.xml
denso_ros2_ws/src/Staubli_ROS2-humble/staubli_tx40_moveit_config/: CMakeLists.txt  package.xml
denso_ros2_ws/src/command_pump_denso/: package.xml  setup.cfg  setup.py
denso_ros2_ws/src/command_pump_denso/command_pump_denso/: denso_pump_controller.py  pump_controller_node.py
denso_ros2_ws/src/command_pump_denso/launch/: pump_controller.launch.py
denso_ros2_ws/src/command_pump_staubli/: README.md  package.xml  setup.cfg  setup.py
denso_ros2_ws/src/command_pump_staubli/command_pump_staubli/: pump_controller_node.py  staubli_pump_valve_node.py
denso_ros2_ws/src/command_pump_staubli/launch/: pump_controller.launch.py  staubli_pump_valve.launch.py
denso_ros2_ws/src/denso_motion_control/: CMakeLists.txt  goto.md  package.xml
denso_ros2_ws/src/denso_motion_control/launch/: motion_server.launch.py
denso_ros2_ws/src/denso_motion_control/src/: motion_server.cpp  motion_server_node.cpp
denso_ros2_ws/src/denso_motion_control/srv/: GetCurrentPose.srv  GoToEuler.srv  GoToJoint.srv  GoToPose.srv  MoveJoints.srv  MoveToPose.srv  MoveWaypoints.srv
denso_ros2_ws/src/denso_robot_drivers_ros2/denso_robot_control/: CMakeLists.txt  package.xml
denso_ros2_ws/src/denso_robot_drivers_ros2/denso_robot_core_interfaces/: CMakeLists.txt
denso_ros2_ws/src/denso_robot_drivers_ros2/denso_robot_descriptions/: CMakeLists.txt  package.xml
denso_ros2_ws/src/isaac_joint_trajectory_bridge/: package.xml  setup.cfg  setup.py
denso_ros2_ws/src/isaac_joint_trajectory_bridge/isaac_joint_trajectory_bridge/: __init__.py  follow_joint_trajectory_bridge.py  joint_state_relay.py
denso_ros2_ws/src/isaac_joint_trajectory_bridge/launch/: follow_joint_trajectory_bridge.launch.py
denso_ros2_ws/src/isaac_joint_trajectory_bridge/resource/: isaac_joint_trajectory_bridge
denso_ros2_ws/src/joint_monitor/: package.xml  readme.md  setup.cfg  setup.py
denso_ros2_ws/src/joint_monitor/joint_monitor/: joint_monitor_node.py  trajectory_plotter_node.py
denso_ros2_ws/src/motion_control/: CMakeLists.txt  goto.md  package.xml
denso_ros2_ws/src/motion_control/config/: time_real.yaml
denso_ros2_ws/src/motion_control/include/motion_control/: motion_diagnostics.hpp  motion_server.hpp  robot_health_monitor.hpp
denso_ros2_ws/src/motion_control/launch/: motion_server.launch.py
denso_ros2_ws/src/motion_control/src/: motion_diagnostics.cpp  motion_server.cpp  motion_server_node.cpp  robot_health_monitor.cpp
denso_ros2_ws/src/motion_control/srv/: GetJointState.srv  GetScaling.srv  InitRobot.srv  ManageBox.srv  ManageMesh.srv  MoveJoints.srv  MoveToPose.srv  MoveWaypoints.srv  SetScaling.srv  SetVirtualCage.srv
denso_ros2_ws/src/tool/: CMakeLists.txt  package.xml
denso_ros2_ws/src/tool/effecteur_test/: effecteur_test.xacro
denso_ros2_ws/src/tool/effecteur_v1/: EffecteurV1.STL  effecteur_v1.xacro
denso_ros2_ws/src/tool/effecteur_v2/: effecteurV2_visual.stl  effecteur_v2.xacro
denso_ros2_ws/src/tool/effecteur_v3/: effecteurV3_colision.stl  effecteur_v3.xacro
isaac_sim/: README.md  export_isaac_bundle.py  install_fastdds_windows.ps1  install_fastdds_wsl.sh  setup_vs060_ros2_bridge.py
isaac_sim/fastdds/: fastdds.xml
(+1452 files in other folders)
