<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>command_pump_denso</name>
  <version>0.1.0</version>
  <description>Configurable vacuum pump and valve controller for DENSO robots via Mini I/O</description>
  <maintainer email="antonin@todo.com">Antonin</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
