<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>command_pump_staubli</name>
  <version>0.1.0</version>
  <description>ROS2 services to command Staubli pump and valves through WRITE_SINGLE_IO.</description>
  <maintainer email="antonin@todo.com">Antonin</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>staubli_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
