<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>isaac_joint_trajectory_bridge</name>
  <version>0.1.0</version>
  <description>Bridge MoveIt FollowJointTrajectory actions to Isaac Sim joint_command JointState messages.</description>
  <maintainer email="antonin@todo.com">Antonin</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>control_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
